--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -1,10 +1,12 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
+
+{% load static %}
 
 {% block content %}
 
 <nav class="navbar bg-dark">
     <div class="container-fluid">
-        <span class="navbar-brand mb-0 h1 text-white">Create Product</span>
+        <span class="navbar-brand mb-0 h1 text-white">Edit Product</span>
     </div>
 </nav>
 
@@ -15,7 +17,7 @@
         <tr>
             <td></td>
             <td>
-                <input type="submit" value="Add Product"/>
+                <input type="submit" value="Edit Product"/>
             </td>
         </tr>
     </table>
