--- a/main/templates/register.html
+++ b/main/templates/register.html
@@ -5,6 +5,11 @@
 {% endblock meta %}
 
 {% block content %}  
+<nav class="navbar bg-dark">
+    <div class="container-fluid">
+        <span class="navbar-brand mb-0 h1 text-white">Shopping List</span>
+    </div>
+</nav>
 
 <div class = "login">
     
