--- a/main/templates/edit_product.html
+++ b/main/templates/edit_product.html
@@ -23,4 +23,10 @@
     </table>
 </form>
 
+<a href="{% url 'main:show_main' %}">
+    <button>
+        Back
+    </button>
+</a>
+
 {% endblock %}
