--- a/main/templates/create_product.html
+++ b/main/templates/create_product.html
@@ -13,12 +13,17 @@
     <table>
         {{ form.as_table }}
         <tr>
-            <td></td>
             <td>
                 <input type="submit" value="Add Product"/>
             </td>
         </tr>
     </table>
 </form>
+
+<a href="{% url 'main:show_main' %}">
+    <button>
+        Back
+    </button>
+</a>
 
 {% endblock %}
