--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -54,11 +54,11 @@
 </div>
 <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Add Product by AJAX</button>
 
-<!-- <a href="{% url 'main:create_product' %}">
+<a href="{% url 'main:create_product' %}">
     <button>
         Add New Product
     </button>
-</a> -->
+</a>
 
 <h5>Sesi terakhir login: {{ last_login }}</h5>
 
